# janus-client

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: PRD.md
openspec/changes/archive/2026-06-26-0001-corrigir-versao-minima-python/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-26-0001-corrigir-versao-minima-python/specs/package-compatibility/: spec.md
openspec/changes/archive/2026-06-26-0002-revisar-e-documentar-codebase/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-26-0002-revisar-e-documentar-codebase/specs/documentation-completeness/: spec.md
openspec/changes/archive/2026-06-26-0002-revisar-e-documentar-codebase/specs/error-handling/: spec.md
openspec/changes/archive/2026-06-26-0002-revisar-e-documentar-codebase/specs/test-coverage/: spec.md
openspec/changes/archive/2026-06-27-package-release-versioning/: tasks.md
openspec/changes/package-release-versioning/: design.md  proposal.md  tasks.md
openspec/changes/package-release-versioning/specs/release-versioning/: spec.md
openspec/specs/documentation-completeness/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/package-compatibility/: spec.md
openspec/specs/release-versioning/: spec.md
openspec/specs/test-coverage/: spec.md
scripts/: verify.sh
src/janus_client/: __init__.py  exceptions.py  fastapi.py  jwks.py  payload.py  verifier.py
tests/: conftest.py  test_fastapi.py  test_jwks.py  test_verifier.py
