[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janus-client"
version = "0.1.0"
description = "Cliente leve para validar access tokens emitidos pelo Janus (JWKS + claim authorized_systems)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "cryptography>=42.0.0",
    "types-python-jose>=3.3.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/janus_client"]
